--- a/TestOS2/res/values/strings.xml
+++ b/TestOS2/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">TestOS2</string>
+    <string name="app_name">OneSwitch</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="button_service">TEST</string>
