--- a/TestOS2/res/values/strings.xml
+++ b/TestOS2/res/values/strings.xml
@@ -6,6 +6,12 @@
     <string name="action_settings">Settings</string>
     <string name="button_service">TEST</string>
     
+    <!-- Buttons -->
+    
+    <string name="button_start">Start</string>
+    <string name="button_stop">Stop</string>
+    <string name="button_glisser">Glisser</string>
+    
     <!-- Notifications -->
     
     <string name="notif_title">One Switch Running</string>
