Texte header popup mecanique centré. Ajout d'un bouton on/off pour activer le service. Résolution des warnings des xml.

--- a/TestOS2/res/values/strings.xml
+++ b/TestOS2/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="button_start">Start</string>
     <string name="button_stop">Stop</string>
     <string name="button_glisser">Glisser</string>
+    <string name="toggle_on">Started</string>
+    <string name="toggle_off">Stoped</string>
     
     <!-- Notifications -->
     
