Ajout d'un Toast pour l'action "glisser". Paramètres sauvegardés correctement (fixed)

--- a/TestOS2/res/values/strings.xml
+++ b/TestOS2/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">OneSwitch</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">One Switch</string>
     <string name="action_settings">Settings</string>
     <string name="button_service">TEST</string>
     
