--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Color Picker -->
-    <string name="dialog_color_picker">Color Picker</string>
-    <string name="press_color_to_apply">Press on Color to apply</string>
+    <string name="dialog_color_picker">Choix de la couleur</string>
+    <string name="press_color_to_apply">Touchez la nouvelle couleur pour valider</string>
 </resources>
