Images manquantes, corrections de bugs

--- a/OneSwitch/res/values/strings.xml
+++ b/OneSwitch/res/values/strings.xml
@@ -26,9 +26,9 @@
 	<string name="mehdi">Mehdi Haddad</string>
 	<string name="sacha">Sacha Loriot</string>
 	<string name="yoann">Yoann Boyère</string>
-	<string name="tutore">Projet tutorés par Matthieu Le Lain</string>
+	<string name="tutore">Projet tutoré par Matthieu Le Lain</string>
 	<string name="CMRRF">pour le compte du CMRRF de Kerpape</string>
-	<string name="willy">représenté par Willy Alègre.</string>
+	<string name="willy">représenté par Willy Allègre.</string>
 	<string name="iut">IUT de Vannes</string>
 	<string name="kerpape">CMRRF de Kerpape</string>
 	
