--- a/OneSwitch/res/values/strings.xml
+++ b/OneSwitch/res/values/strings.xml
@@ -2,10 +2,7 @@
 <resources>
 
     <string name="app_name">OneSwitch</string>
-    <string name="hello_world">One Switch</string>
-    <string name="action_settings">Settings</string>
-    <string name="button_service">TEST</string>
-
+    
     <!-- Buttons -->
 
     <string name="button_start">Start</string>
@@ -14,9 +11,11 @@
     <string name="toggle_on">Started</string>
     <string name="toggle_off">Stoped</string>
     <string name="bt">button</string>
-    
+
     
     <!-- About OneSwitch -->
+    <string name="title_activity_about">AboutActivity</string>
+
     <string name="os_logo_desc">OneSwitch</string>
     <string name="oneswitch">OneSwitch</string>
     <string name="app_realized">Application réalisée dans le cadre</string>
@@ -34,9 +33,8 @@
 	
     <!-- Notifications -->
 
-    <string name="notif_title">One Switch Running</string>
-    <string name="notif_desc">One Switch is currently running</string>
-    <string name="title_activity_about">AboutActivity</string>
+    <string name="notif_title">OneSwitch activé</string>
+    <string name="notif_desc">Cliquer pour retourner sur l\'application</string>
     
     <!-- Clavier -->
     <string name="simple_ime">Clavier OneSwitch</string>
